--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!doctype html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 <button onclick="TelegramGameProxy.shareScore()">Share score</button>
 <script src="https://telegram.org/js/games.js"></script>
