--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="game"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
-<button onclick="TelegramGameProxy.shareScore()">Share score</button>
+<!-- <button onclick="TelegramGameProxy.shareScore()">Share score</button> -->
 <script src="https://telegram.org/js/games.js"></script>
 
 </html>
